# Lab6-vLLM

./: .gitignore  HOMEWORK.md  LAB_INSTRUCTION.md  LAB_INSTRUCTION_CLOUD.md  README.md  exercise1_tool_calling.ipynb  exercise2_remote_data_tools.ipynb  exercise3_time_mcp_server.ipynb  exercise4_visualization_mcp_server.ipynb  exercise5_guardrails.ipynb  exercise5_llm_security_with_guardrails.ipynb  pyproject.toml  transformers_inference.ipynb
